[package]
name = "skip_list"
version = "0.1.0"
authors = ["Orion Henry <orion.henry@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.13"
uuid = { version = "0.6", features = ["v4"] }
time = "0.1"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = true
